OD-11314 merge 6 jdk18 to trunk
git-svn-id: https://svn.ish.com.au/ish/willow/trunk@49447 fb2e276d-fae9-0310-b578-b71ac85840b9